2011-08-09  Jeremy Cribb <jcribb@email.unc.edu>
	* getMSDslope.m:  now handles empty case for input parameters.
	* msd.m: removed 'winedge' parameter.  now keeps squared displacements "r^2" only the function is asked to output it.
	* plot_msd.m: now handles empty case for input parameters.  changed coloring and linewidth of the mean to make it easier to see amongst individual measurments.
	* msdstat.m: now handles empty case for input parameters.  added logentry capability.
	* plot_ve.m: same.
	* ve.m: same.
	* video_msd.m: same.  also handles squared displacments only when asked.	

2011-07-20  Jeremy Cribb <jcribb@email.unc.edu>
	* video_msd.m:  uses numeric input (in place of file names) regardless of input units and ignores the conversion with calib_um. 
	* ve.m: removed old commented code.  removed a parameter that is no longer needed.

2011-07-19  Jeremy Cribb <jcribb@email.unc.edu>
	* video_msd.m:  assumes numeric input (in place of file names) has units of pixels (the same as if the file were loaded) and uses the calib_um accordingly.

2011-07-18  Jeremy Cribb <jcribb@email.unc.edu>
	* plot_msd.m: now returns the figure handle created/used when plotting the msd.
	* plot_ve.m: same.
	* video_msd.m: now it converts displacement data from 'pixels' to 'me' as it loads the data through 'load_video_tracking' instead of handling it on its own.

2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
	* msdstat.m:  added.  handles computing statistics on msd datasets.
	* video_msd.m:  added back in the option to record each squared displacment.
	* plot_msd.m:  now uses msdstat instead of computing stats on its own.  added 'u' as a plotting option to plot MSD in microns^2 instead of meters^2
	* ve.m:  removed some old commented out code.

2011-06-13  Jeremy Cribb <jcribb@email.unc.edu>
	* plot_msd_2pt.m:  added on behalf of Thomas Sayre_McCord.  plots the 2pt MSD as a function of time scale.