@@ -1,3 +1,7 @@
+2011-09-09  Jeremy Cribb <jcribb@email.unc.edu>
+	* msdstat.m:  better handling of "empty set" cases.
+	* video_msd.m:  added 'window' to output msd structure.  better handling of "empty set" cases.
+
 2011-08-09  Jeremy Cribb <jcribb@email.unc.edu>
 	* getMSDslope.m:  now handles empty case for input parameters.
 	* msd.m: removed 'winedge' parameter.  now keeps squared displacements "r^2" only the function is asked to output it.
